--- a/Admin/Admin/Views/Advisor/NewAdvisor.cshtml
+++ b/Admin/Admin/Views/Advisor/NewAdvisor.cshtml
@@ -1,5 +1,4 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "NewAdvisor";
 }
 
@@ -8,9 +7,9 @@
 <script src="@Url.Content("~/Scripts/angular.min.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/ng/ngApp/ngApp.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/ng/ngService/ngCrudService.js")" type="text/javascript"></script>
-<script src="@Url.Content("~/ng/ngControllers/ngNewAdvisorController.js")" type="text/javascript"></script>
+<script src="@Url.Content("~/ng/ngControllers/ngAdvisorController.js")" type="text/javascript"></script>
 
-<div class="content-wrapper" ng-controller="AdvisorController" ng-app="myapp">
+<div class="content-wrapper" ng-controller="Advisor" ng-app="myapp">
     <form name="AdvisorForm" ng-submit="Save()">
         <!-- Content Header (Page header) -->
         <section class="content-header">
@@ -28,117 +27,158 @@
                 <!-- Form controls -->
                 <div class="col-sm-12">
                     <div class="panel panel-bd lobidrag">
-                        <div class="panel-body">
-                            <div class="col-md-12 form-group alert alert-success" ng-show="successMessagebool ">
-                                {{successMessage}}
-                            </div>
-                            <div class="col-sm-3">
-                                <div class="form-group">
+                        <div class="panel-body">                            
+                            <div class="col-sm-12">
+                                <div class="form-group col-sm-3">
                                     <label>First Name</label>
-                                    <input type="text" class="form-control" placeholder="Enter First Name" required ng-model="FirstName" tabindex="1">
+                                    <input type="text" class="form-control" placeholder="Enter First Name" required ng-model="FirstName">
                                 </div>
-                                <div class="form-group">
-                                    <label>Email</label>
-                                    <input type="email" class="form-control" placeholder="Enter Email" required ng-model="EmailId" tabindex="5">
-                                </div>
-                                <div class="form-group">
-                                    <label>Designation</label>
-                                    <select class="form-control" ng-model="Designation" required tabindex="9">
-                                        <option value="" selected>Choose Designation</option>
-                                        <option ng-repeat="Designation in Designations"
-                                                value="{{Designation.DesignationId}}">
-                                            {{Designation.Designation}}
-                                        </option>
-                                    </select>
-                                </div>
-                                <div class="form-group">
-                                    <label>Role</label>
-                                    <select class="form-control" ng-model="AdvisorRole" required tabindex="9">
-                                        <option value="" selected>Choose Role</option>
-                                        <option ng-repeat="AdvisorRole in AdvisorRoles"
-                                                value="{{AdvisorRole.RoleId}}">
-                                            {{AdvisorRole.Role}}
-                                        </option>
-                                    </select>
-                                </div>
-
-                                <div class="form-group">
-                                    <button type="submit" class="btn btn-primary btn-rounded w-md m-b-5">Save</button>
-                                    <button type="button" class="btn btn-danger btn-rounded w-md m-b-5">Cancel</button>
-                                </div>
-                            </div>
-                            <div class="col-sm-3">
-                                <div class="form-group">
+                                <div class="form-group col-sm-3">
                                     <label>Last Name</label>
-                                    <input type="text" class="form-control" placeholder="Enter last Name" required ng-model="LastName" tabindex="2">
+                                    <input type="text" class="form-control" placeholder="Enter last Name" required ng-model="LastName">
                                 </div>
-                                <div class="form-group">
-                                    <label>Login ID</label>
-                                    <input type="text" class="form-control" placeholder="Login ID" ng-model="LoginId" required tabindex="6">
-                                </div>
-                                <div class="form-group">
-                                    <label>Branch</label>
-                                    <select class="form-control" ng-model="Branch" required tabindex="10">
-                                        <option value="" selected>Choose Branch</option>
-                                        <option ng-repeat="Branch in Branchs"
-                                                value="{{Branch.BranchId}}">
-                                            {{Branch.BranchName}}
-                                        </option>
-                                    </select>
-                                </div>
-                               
-                            </div>
-                            <div class="col-sm-3">
-                                <div class="form-group">
+                                <div class="form-group col-sm-3">
                                     <label>Mobile</label>
-                                    <input type="text" class="form-control" placeholder="Enter Mobile" required ng-model="MobileNumber" tabindex="3">
+                                    <input type="number" class="form-control" placeholder="Enter Mobile" required ng-model="MobileNumber">
                                 </div>
-                                <div class="form-group">
+                                <div class="form-group col-sm-3">
+                                    <label>Phone</label>
+                                    <input type="number" class="form-control" placeholder="Enter Phone" required ng-model="PhoneNumber">
+                                </div>
+                            </div>
+
+                            <div class="col-sm-12">
+                                <div class="form-group col-sm-3">
+                                    <label>Email</label>
+                                    <input type="email" class="form-control" placeholder="Enter Email" required ng-model="EmailId">
+                                </div>
+                                <div class="form-group col-sm-3">
+                                    <label>Login ID</label>
+                                    <input type="text" class="form-control" placeholder="Login ID" ng-model="LoginId" required>
+                                </div>
+                                <div class="form-group col-sm-3">
                                     <label>Password</label>
-                                    <input type="password" class="form-control" placeholder="Password" required id="password" ng-model="Password" tabindex="7">
+                                    <input type="password" class="form-control" placeholder="Password" required id="password" ng-model="Password">
                                 </div>
-                                <div class="form-group">
+                                <div class="form-group col-sm-3">
+                                    <label>Confirm Password</label>
+                                    <input type="password" class="form-control" placeholder="Confirm Password" required id="confirm_password" ng-model="ConfirmPassword">
+                                </div>
+                            </div>
+
+                            <div class="col-sm-12">
+                                <div class="form-group col-sm-3">
+                                    <label>Designation</label>
+                                    <select class="form-control" ng-model="DType" required>
+                                        <option value="" selected>Choose Designation</option>
+                                        <option ng-repeat="DType in DesignationTypes" value="{{DType.DesignationID}}">{{DType.Designation}}</option>
+                                    </select>
+                                </div>
+                                <div class="form-group col-sm-3">
+                                    <label>Branch</label>
+                                    <select class="form-control" ng-model="Btype" required>
+                                        <option value="" selected>Choose Branch</option>
+                                        <option ng-repeat="Btype in Branchs" value="{{Btype.BranchID}}">{{Btype.BranchName}}</option>
+                                    </select>
+                                </div>   
+                                <div class="form-group col-sm-3">
                                     <label>Advisor Type</label>
-                                    <select class="form-control" ng-model="AdvisorType" required tabindex="11">
-                                        <option value="" selected>Choose Advisor Type</option>
-                                        <option ng-repeat="AdvisorType in AdvisorTypes"
-                                                value="{{AdvisorType.AdvisorTypeId}}">
-                                            {{AdvisorType.AdvisorType}}
+                                    <select class="form-control" ng-model="ConsultantType" required>
+                                        <option value="" selected>Choose Consultant Type</option>
+                                        <option ng-repeat="ConsultantType in ConsultantTypes"
+                                                value="{{ConsultantType.AdvisorTypeID}}">
+                                            {{ConsultantType.AdvisorType}}
                                         </option>
                                     </select>
                                 </div>
-                            </div>
-                            <div class="col-sm-3">
-                                <div class="form-group">
-                                    <label>Phone</label>
-                                    <input type="text" class="form-control" placeholder="Enter Phone" required ng-model="PhoneNumber" tabindex="4">
-                                </div>
-                                <div class="form-group">
-                                    <label>Confirm Password</label>
-                                    <input type="password" class="form-control" placeholder="Confirm Password" required id="confirm_password" ng-model="ConfirmPassword" tabindex="8">
-                                </div>
-                                <div class="form-group">
+                                <div class="form-group col-sm-3">
                                     <label>Status</label>
-                                    <select class="form-control" ng-model="Status" required tabindex="12">
-                                        <option value="" selected>Choose Status</option>
+                                    <select class="form-control" ng-model="Status" required>
+                                        <option value="" selected>Choose User Status</option>
                                         <option ng-repeat="Status in Statues"
-                                                value="{{Status.AdvisorStatusId}}">
+                                                value="{{Status.AdvisorStatusID}}">
                                             {{Status.AdvisorStatus}}
                                         </option>
                                     </select>
                                 </div>
-
                             </div>
-
-                          
-
+                            <div class="col-sm-12">                                    
+                                <div class="form-group col-sm-3">
+                                    <label>Role</label>
+                                    <select class="form-control" ng-model="RType" required>
+                                        <option value="" selected>Choose Role</option>
+                                        <option ng-repeat="RType in AdvisorRoleTypes" value="{{RType.RoleID}}">{{RType.Role}}</option>
+                                    </select>
+                                </div>            
+                            </div>
+                            <div class="col-sm-12">
+                                <div class="form-group col-sm-6">
+                                    <button type="submit" class="btn btn-primary btn-rounded w-md m-b-5">Save</button>
+                                    <button type="button" class="btn btn-danger btn-rounded w-md m-b-5">Cancel</button>
+                                </div>
+                            </div>
                         </div>
+
                     </div>
                 </div>
             </div>
         </section>
         <!-- /.content -->
     </form>
+
+    <div class="modal fade" id="Success" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header modal-header-primary">                   
+                    <h3><i class="fa fa-user m-r-5"></i>Thank you</h3>
+                </div>
+                <div class="modal-body">
+                    <div class="row">
+                        <div class="col-md-12">                            
+                                <fieldset>                                  
+                                    <div class="col-md-12 form-group user-form-group">
+                                        <label class="control-label" style="color:green">Advisor Added Successfully!</label>                                       
+                                    </div>
+                                </fieldset>                            
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-danger pull-left" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+            <!-- /.modal-content -->
+        </div>
+        <!-- /.modal-dialog -->
+    </div>
+
+    <div class="modal fade" id="Failure" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header modal-header-primary">
+                    <h3><i class="fa fa-user m-r-5"></i>Sorry</h3>
+                </div>
+                <div class="modal-body">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <fieldset>
+                                <div class="col-md-12 form-group user-form-group">
+                                    <label class="control-label" style="color:green">Something went wrong, please try again!</label>
+                                </div>
+                            </fieldset>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-danger pull-left" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+            <!-- /.modal-content -->
+        </div>
+        <!-- /.modal-dialog -->
+    </div>
+
+
 
 </div>
 <script type="text/javascript">
