Changes in Layout

--- a/Admin/Admin/Views/Shared/_Layout.cshtml
+++ b/Admin/Admin/Views/Shared/_Layout.cshtml
@@ -17,8 +17,7 @@
     <!--<link href="assets/bootstrap-rtl/bootstrap-rtl.min.css" rel="stylesheet" type="text/css"/>-->
     <!-- Lobipanel css -->
     <link href="~/assets/plugins/lobipanel/lobipanel.min.css" rel="stylesheet" type="text/css" />
-    <!-- Pace css -->
-    <link href="~/assets/plugins/pace/flash.css" rel="stylesheet" type="text/css" />
+    
     <!-- Font Awesome -->
     <link href="~/assets/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
     <!-- Pe-icon -->
@@ -116,8 +115,8 @@
                             </span>
                         </a>
                         <ul class="treeview-menu">
-                            <li><a href="add-customer.html">Add User</a></li>
-                            <li><a href="clist.html">Users List</a></li>                            
+                            <li><a href="add-customer.html">Add Advisor</a></li>
+                            <li><a href="clist.html">Advisors List</a></li>                            
                         </ul>
                     </li>
                     <li class="treeview">
