--- a/Client/Client/Views/Shared/_Layout.cshtml
+++ b/Client/Client/Views/Shared/_Layout.cshtml
@@ -20,9 +20,8 @@
     <!-- Pace css -->
     <link href="~/assets/plugins/pace/flash.css" rel="stylesheet" type="text/css" />
     <!-- Font Awesome -->
-    <link href="~/assets/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
-    <!-- Pe-icon -->
-    <link href="~/assets/pe-icon-7-stroke/css/pe-icon-7-stroke.css" rel="stylesheet" type="text/css" />
+    <link href="~/assets/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css" />   
+   
     <!-- Themify icons -->
     <link href="~/assets/themify-icons/themify-icons.css" rel="stylesheet" type="text/css" />
     <!-- End Global Mandatory Style
@@ -111,45 +110,55 @@
                     </li>
                     <li class="treeview">
                         <a href="#">
-                            <i class="fa fa-users"></i><span>User Management</span>
+                            <i class="fa fa-users"></i><span>Personnel Info</span>
                             <span class="pull-right-container">
                                 <i class="fa fa-angle-left pull-right"></i>
                             </span>
                         </a>
                         <ul class="treeview-menu">
-                            <li><a href="add-customer.html">Add User</a></li>
-                            <li><a href="clist.html">Users List</a></li>
+                            <li><a href="add-customer.html">Client him/her </a></li>
+                            <li><a href="clist.html">Spouse </a></li>
+                            <li><a href="clist.html">Children  </a></li>
+
                         </ul>
                     </li>
                     <li class="treeview">
                         <a href="#">
-                            <i class="fa fa-list"></i><span>Clients List</span>
+                            <i class="fa fa-list"></i><span>Trusts</span>
                             <span class="pull-right-container">
                                 <i class="fa fa-angle-left pull-right"></i>
                             </span>
                         </a>
                         <ul class="treeview-menu">
-                            <li><a href="deposit.html">Location Wise</a></li>
+                            <li><a href="clist.html">Add Trust  </a></li>
+                            <li><a href="clist.html">Add Trust Settler </a></li>
+                            <li><a href="clist.html">Add Trustees  </a></li>
                         </ul>
                     </li>
-                    <li class="treeview">
-                        <a href="#">
-                            <i class="fa fa-book"></i><span>Service Requests</span>
+
+                    <li>
+                        <a href="note.html">
+                            <i class="fa fa-user-circle"></i> <span>Beneficiary</span>
                             <span class="pull-right-container">
                                 <i class="fa fa-angle-left pull-right"></i>
                             </span>
                         </a>
                         <ul class="treeview-menu">
-                            <li><a href="invoice.html">Accept Ownership of SR</a></li>
-                            <li><a href="ninvoices.html">Allocate ownership of SR <br /> to other staff</a></li>
-                            <li><a href="recurring.html">Add followup date and time</a></li>
-                            <li><a href="nrecurring.html">Add Client feedback and <br /> update next followup</a></li>
-                            <li><a href="quote.html">Work in process SR</a></li>
-                            <li><a href="nquote.html">Un-accepted SR</a></li>
-                            <li><a href="payment.html">Client Profile and Wealth <br /> flowchart</a></li>
-                            <li><a href="taxeport.html">Upload Documents</a></li>
+                            <li><a href="clist.html">Add Beneficiary  </a></li>                           
                         </ul>
                     </li>
+                    <li>
+                        <a href="note.html">
+                            <i class="fa fa-home"></i> <span>Company</span>
+                            <span class="pull-right-container">
+                                <i class="fa fa-angle-left pull-right"></i>
+                            </span>
+                        </a>
+                        <ul class="treeview-menu">
+                            <li><a href="clist.html">Add Company</a></li>
+                        </ul>
+                    </li>
+
                 </ul>
             </div>
             <!-- /.sidebar -->
