--- a/Admin/Admin/Views/Advisor/AdvisorList.cshtml
+++ b/Admin/Admin/Views/Advisor/AdvisorList.cshtml
@@ -7,7 +7,7 @@
 <script src="@Url.Content("~/ng/ngApp/ngApp.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/ng/ngService/ngCrudService.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/ng/ngControllers/ngAdvisorController.js")" type="text/javascript"></script>
-
+<script src="@Url.Content("~/Scripts/jquery-1.10.2.min.js")"></script>
 <div class="content-wrapper" ng-controller="Advisor" ng-app="myapp">
     <!-- Content Header (Page header) -->
     <section class="content-header">
@@ -34,30 +34,31 @@
                         </div>
                         <!-- Plugin content:powerpoint,txt,pdf,png,word,xl -->
                         <div class="table-responsive">
-                            <table id="dataTableExample1" class="table table-bordered table-striped table-hover">
+                            Search <input type="text" ng-model="search" placeholder="Enter text to search" />
+
+                            <table id="dataTableExample1" class="table table-bordered table-striped table-hover" style="margin-top:20px">
                                 <thead>
-                                    <tr class="info">
-                                        <th>Id</th>
+                                    <tr class="info">                                        
                                         <th>First Name</th>
                                         <th>Last Name</th>
-                                        <th>Mobile Number</th>
-                                        <th>Phone Number</th>
+                                        <th>Mobile Number</th>                                        
                                         <th>Email</th>
+                                        <th>Designation</th>
                                         <th>Actions</th>
                                     </tr>
                                 </thead>
                                 <tbody>
 
-                                    <tr ng-repeat="Advisor in AdvisorList">
-                                        <td>{{Advisor.AdvisorID}}</td>
+                                    <tr ng-repeat="Advisor in AdvisorList | filter: search">
+                                    
                                         <td>{{Advisor.FirstName}}</td>
                                         <td>{{Advisor.LastName}}</td>
-                                        <td>{{Advisor.Mobile}}</td>
-                                        <td>{{Advisor.Phone}}</td>
+                                        <td>{{Advisor.Mobile}}</td>                                        
                                         <td>{{Advisor.EmailID}}</td>
+                                        <td>{{Advisor.Designation}}</td>
                                         <td>
                                             <button type="button" class="btn btn-add btn-sm" data-toggle="modal" title="Edit" data-target="#Update" ng-click="GetDetails(Advisor)"><i class="fa fa-pencil"></i></button>
-                                            <button type="button" class="btn btn-danger btn-sm" data-toggle="modal" title="Delete" data-target="#Delete" ng-click="GetDetails(Advisor)"><i class="fa fa-trash-o"></i> </button>
+                                            @*<button type="button" class="btn btn-danger btn-sm" data-toggle="modal" title="Delete" data-target="#Delete" ng-click="GetDetails(Advisor)"><i class="fa fa-trash-o"></i> </button>*@
                                         </td>
                                     </tr>
                                 </tbody>
@@ -68,22 +69,24 @@
             </div>
         </div>
         <!-- customer Modal1 -->
-        <div class="modal fade" id="Update" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal fade" id="Update" tabindex="-1" role="dialog" aria-hidden="true" data-backdrop="static">
             <div class="modal-dialog" style="width:900px">
                 <div class="modal-content">
                     <div class="modal-header modal-header-primary">
                         @*<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>*@
                         <h3><i class="fa fa-user m-r-5"></i> Update Advisor</h3>
+                        <div class="col-md-12 form-group" style="color:green;text-align:center" ng-show="successMessagebool ">
+                            {{successMessage}}
+                        </div>
                     </div>
+
                     <div class="modal-body">
                         <div class="row">
                             <div class="panel-body">
                                 <div class="col-md-12">
                                     <form class="" ng-submit="Update(Advisor)">
                                         <fieldset>
-                                            <div class="col-md-12 form-group" style="color:green;text-align:center" ng-show="successMessagebool ">
-                                                {{successMessage}}
-                                            </div>
+
                                             <div class="col-lg-12">
                                                 <div class="col-md-3 form-group">
                                                     <label>First Name</label>
@@ -95,11 +98,11 @@
                                                 </div>
                                                 <div class="col-md-3 form-group">
                                                     <label>Mobile</label>
-                                                    <input type="text" class="form-control" placeholder="Enter Mobile" required ng-model="Advisor.Mobile">
+                                                    <input type="text" class="form-control" placeholder="Enter Mobile" required ng-model="Advisor.Mobile" id="MobileNumber" name="MobileNumber">
                                                 </div>
                                                 <div class="col-md-3 form-group">
                                                     <label>Phone</label>
-                                                    <input type="text" class="form-control" placeholder="Enter Phone" required ng-model="Advisor.Phone">
+                                                    <input type="text" class="form-control" placeholder="Enter Phone" ng-model="Advisor.Phone" id="PhoneNumber" name="PhoneNumber">
                                                 </div>
 
                                             </div>
@@ -118,7 +121,7 @@
                                                 </div>
                                                 <div class="col-md-3 form-group">
                                                     <label>Designation</label>
-                                                    <select class="form-control" required  id="Designation" ng-model="DestinationSelected">
+                                                    <select class="form-control" required id="Designation" ng-model="DestinationSelected">
                                                         <option value="" selected>Choose Designation</option>
                                                         <option ng-repeat="Designation in DesignationTypes" ng-selected="Designation.DesignationID === DestinationSelected"
                                                                 value="{{Designation.DesignationID}}">
@@ -153,7 +156,7 @@
                                                     <select class="form-control" ng-model="StatusSelected" required>
                                                         <option value="" selected>Choose Status</option>
                                                         <option ng-repeat="Status in Statues" ng-selected="Status.AdvisorStatusID === StatusSelected"
-                                                                value="{{Status.AdvisorStatusId}}">
+                                                                value="{{Status.AdvisorStatusID}}">
                                                             {{Status.AdvisorStatus}}
                                                         </option>
                                                     </select>
@@ -163,7 +166,7 @@
                                                     <select class="form-control" ng-model="RoleSelected" required>
                                                         <option value="" selected>Choose Role</option>
                                                         <option ng-repeat="AdvisorRole in AdvisorRoleTypes" ng-selected="AdvisorRole.RoleID === RoleSelected"
-                                                                value="{{AdvisorRole.RoleId}}">
+                                                                value="{{AdvisorRole.RoleID}}">
                                                             {{AdvisorRole.Role}}
                                                         </option>
                                                     </select>
@@ -182,7 +185,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>                 
+                    </div>
                 </div>
                 <!-- /.modal-content -->
             </div>
@@ -190,43 +193,70 @@
         </div>
         <!-- /.modal -->
         <!-- Modal -->
-        <!-- Customer Modal2 -->
-        <div class="modal fade" id="Delete" tabindex="-1" role="dialog" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header modal-header-primary">
-                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                        <h3><i class="fa fa-user m-r-5"></i> Delete Advisor</h3>
-                    </div>
-                    <div class="modal-body">
-                        <div class="row">
-                            <div class="col-md-12">
-                                <form class="form-horizontal" ng-submit="Delete(Advisor)">
-                                    <fieldset>
-                                        <div class="col-md-12 form-group alert alert-success" ng-show="successMessagebool ">
-                                            {{successMessage}}
-                                        </div>
-                                        <div class="col-md-12 form-group user-form-group">
-                                            <label class="control-label">Are you sure you want to Delete Advisor</label>
-                                            <div class="pull-right">
-                                                <button type="submit" class="btn btn-add btn-sm">YES</button>
-                                            </div>
-                                        </div>
-                                    </fieldset>
-                                </form>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-danger pull-left" data-dismiss="modal" ng-click="Close()">Close</button>
-                    </div>
-                </div>
-                <!-- /.modal-content -->
-            </div>
-            <!-- /.modal-dialog -->
-        </div>
-        <!-- /.modal -->
+      
     </section>
     <!-- /.content -->
 </div>
+
+<script type="text/javascript">
+ 
+    function ValidateNo() {
+        var mobilenumber = document.getElementById("MobileNumber");
+
+        if (mobilenumber.value.length < 10 || mobilenumber.value.length > 10) {
+            MobileNumber.setCustomValidity("Please enter Valid Mobile Number.");
+        }
+        else {
+            MobileNumber.setCustomValidity('');
+        }
+    }
+    MobileNumber.onkeyup = ValidateNo;
+
+    $("#MobileNumber").bind('keypress', function (e) {
+        if (e.keyCode == '9' || e.keyCode == '16') {
+            return;
+        }
+        var code;
+        if (e.keyCode) code = e.keyCode;
+        else if (e.which) code = e.which;
+        if (e.which == 46)
+            return false;
+        if (code == 8 || code == 46)
+            return true;
+        if (code < 48 || code > 57)
+            return false;
+    });
+    $("#MobileNumber").bind('mouseenter', function (e) {
+        var val = $(this).val();
+        if (val != '0') {
+            val = val.replace(/[^0-9]+/g, "");
+            $(this).val(val);
+        }
+    });
+
+
+    $("#PhoneNumber").bind('keypress', function (e) {
+        if (e.keyCode == '9' || e.keyCode == '16') {
+            return;
+        }
+        var code;
+        if (e.keyCode) code = e.keyCode;
+        else if (e.which) code = e.which;
+        if (e.which == 46)
+            return false;
+        if (code == 8 || code == 46)
+            return true;
+        if (code < 48 || code > 57)
+            return false;
+    });
+    $("#PhoneNumber").bind('mouseenter', function (e) {
+        var val = $(this).val();
+        if (val != '0') {
+            val = val.replace(/[^0-9]+/g, "");
+            $(this).val(val);
+        }
+    });
+
+</script>
+
 
