--- a/Admin/Admin/Views/Advisor/NewAdvisor.cshtml
+++ b/Admin/Admin/Views/Advisor/NewAdvisor.cshtml
@@ -9,6 +9,8 @@
 <script src="@Url.Content("~/ng/ngService/ngCrudService.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/ng/ngControllers/ngAdvisorController.js")" type="text/javascript"></script>
 
+<script src="@Url.Content("~/Scripts/jquery-1.10.2.min.js")"></script>
+
 <div class="content-wrapper" ng-controller="Advisor" ng-app="myapp">
     <form name="AdvisorForm" ng-submit="Save()">
         <!-- Content Header (Page header) -->
@@ -27,7 +29,7 @@
                 <!-- Form controls -->
                 <div class="col-sm-12">
                     <div class="panel panel-bd lobidrag">
-                        <div class="panel-body">                            
+                        <div class="panel-body">
                             <div class="col-sm-12">
                                 <div class="form-group col-sm-3">
                                     <label>First Name</label>
@@ -39,11 +41,13 @@
                                 </div>
                                 <div class="form-group col-sm-3">
                                     <label>Mobile</label>
-                                    <input type="number" class="form-control" placeholder="Enter Mobile" required ng-model="MobileNumber">
+                                    <input type="text" class="form-control" placeholder="Enter Mobile" required ng-model="MobileNumber" maxlength="10" id="MobileNumber" name="MobileNumber">
+
+
                                 </div>
                                 <div class="form-group col-sm-3">
                                     <label>Phone</label>
-                                    <input type="number" class="form-control" placeholder="Enter Phone" required ng-model="PhoneNumber">
+                                    <input type="text" class="form-control" placeholder="Enter Phone" ng-model="PhoneNumber" maxlength="10" id="PhoneNumber" name="PhoneNumber">
                                 </div>
                             </div>
 
@@ -80,7 +84,7 @@
                                         <option value="" selected>Choose Branch</option>
                                         <option ng-repeat="Btype in Branchs" value="{{Btype.BranchID}}">{{Btype.BranchName}}</option>
                                     </select>
-                                </div>   
+                                </div>
                                 <div class="form-group col-sm-3">
                                     <label>Advisor Type</label>
                                     <select class="form-control" ng-model="ConsultantType" required>
@@ -102,14 +106,14 @@
                                     </select>
                                 </div>
                             </div>
-                            <div class="col-sm-12">                                    
+                            <div class="col-sm-12">
                                 <div class="form-group col-sm-3">
                                     <label>Role</label>
                                     <select class="form-control" ng-model="RType" required>
                                         <option value="" selected>Choose Role</option>
                                         <option ng-repeat="RType in AdvisorRoleTypes" value="{{RType.RoleID}}">{{RType.Role}}</option>
                                     </select>
-                                </div>            
+                                </div>
                             </div>
                             <div class="col-sm-12">
                                 <div class="form-group col-sm-6">
@@ -129,17 +133,17 @@
     <div class="modal fade" id="Success" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
-                <div class="modal-header modal-header-primary">                   
+                <div class="modal-header modal-header-primary">
                     <h3><i class="fa fa-user m-r-5"></i>Thank you</h3>
                 </div>
                 <div class="modal-body">
                     <div class="row">
-                        <div class="col-md-12">                            
-                                <fieldset>                                  
+                        <div class="col-md-12">
+                                <fieldset>
                                     <div class="col-md-12 form-group user-form-group">
-                                        <label class="control-label" style="color:green">Advisor Added Successfully!</label>                                       
+                                        <label class="control-label" style="color:green">Advisor Added Successfully!</label>
                                     </div>
-                                </fieldset>                            
+                                </fieldset>
                         </div>
                     </div>
                 </div>
@@ -187,7 +191,7 @@
 
     function validatePassword() {
         if (password.value != confirm_password.value) {
-            confirm_password.setCustomValidity("Password should match with this field");
+            confirm_password.setCustomValidity("This field should match with Password");
         } else {
             confirm_password.setCustomValidity('');
         }
@@ -195,6 +199,82 @@
 
     password.onchange = validatePassword;
     confirm_password.onkeyup = validatePassword;
+
+
+
+
+
+    function ValidateNo() {
+        var mobilenumber = document.getElementById("MobileNumber");
+
+        if (mobilenumber.value.length < 10 || mobilenumber.value.length > 10) {
+            MobileNumber.setCustomValidity("Please enter Valid Mobile Number.");
+        }
+        else {
+            MobileNumber.setCustomValidity('');
+        }
+    }
+    MobileNumber.onkeyup = ValidateNo;
+
+    $("#MobileNumber").bind('keypress', function (e) {
+        if (e.keyCode == '9' || e.keyCode == '16') {
+            return;
+        }
+        var code;
+        if (e.keyCode) code = e.keyCode;
+        else if (e.which) code = e.which;
+        if (e.which == 46)
+            return false;
+        if (code == 8 || code == 46)
+            return true;
+        if (code < 48 || code > 57)
+            return false;
+    });
+    $("#MobileNumber").bind('mouseenter', function (e) {
+        var val = $(this).val();
+        if (val != '0') {
+            val = val.replace(/[^0-9]+/g, "");
+            $(this).val(val);
+        }
+    });
+
+
+    function ValidateNo1() {
+        var phonenumber = document.getElementById("PhoneNumber");
+
+        if (phonenumber.value.length < 10 || phonenumber.value.length > 10) {
+            PhoneNumber.setCustomValidity("Please enter Valid Phone Number.");
+        }
+        else {
+            PhoneNumber.setCustomValidity('');
+        }
+    }
+    PhoneNumber.onkeyup = ValidateNo1;
+
+ 
+
+    $("#PhoneNumber").bind('keypress', function (e) {
+        if (e.keyCode == '9' || e.keyCode == '16') {
+            return;
+        }
+        var code;
+        if (e.keyCode) code = e.keyCode;
+        else if (e.which) code = e.which;
+        if (e.which == 46)
+            return false;
+        if (code == 8 || code == 46)
+            return true;
+        if (code < 48 || code > 57)
+            return false;
+    });
+    $("#PhoneNumber").bind('mouseenter', function (e) {
+        var val = $(this).val();
+        if (val != '0') {
+            val = val.replace(/[^0-9]+/g, "");
+            $(this).val(val);
+        }
+    });
+
 </script>
 
 
