Client and Admin UI Changes

--- a/Admin/Admin/Views/Home/Index.cshtml
+++ b/Admin/Admin/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     ViewBag.Title = "Home Page";
 }
 
-<script src="@Url.Content("~/Scripts/angular.min.js")" type="text/javascript"></script>
+@*<script src="@Url.Content("~/Scripts/angular.min.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/ng/ngApp/ngApp.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/ng/ngService/ngCrudService.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/ng/ngControllers/ngNewUserController.js")" type="text/javascript"></script>
@@ -135,5 +135,5 @@
 
     password.onchange = validatePassword;
     confirm_password.onkeyup = validatePassword;
-</script>
+</script>*@
 
