--- a/Client/Client/Views/Client/NewClient.cshtml
+++ b/Client/Client/Views/Client/NewClient.cshtml
@@ -78,7 +78,7 @@
                             <div class="col-md-12">
                                 <div class="form-group col-sm-3">
                                     <label>Mobile</label>
-                                    <input type="text" class="form-control" placeholder="Enter Mobile" required ng-model="Mobile" maxlength="10">
+                                    <input type="text" class="form-control" placeholder="Enter Mobile" required ng-model="Mobile" maxlength="10" id="Mobile" name="Mobile">
                                 </div>
                                 <div class="form-group col-sm-3">
                                     <label>Email</label>
@@ -172,6 +172,51 @@
             $(this).val(val);
         }
     });
+    $("#Mobile").bind('keypress', function (e) {
+        if (e.keyCode == '9' || e.keyCode == '16') {
+            return;
+        }
+        var code;
+        if (e.keyCode) code = e.keyCode;
+        else if (e.which) code = e.which;
+        if (e.which == 46)
+            return false;
+        if (code == 8 || code == 46)
+            return true;
+        if (code < 48 || code > 57)
+            return false;
+    });
+    $("#Mobile").bind('mouseenter', function (e) {
+        var val = $(this).val();
+        if (val != '0') {
+            val = val.replace(/[^0-9]+/g, "");
+            $(this).val(val);
+        }
+    });
+
+    function ValidateNo() {
+        var mobilenumber = document.getElementById("Mobile");
+
+        if (mobilenumber.value.length < 10 || mobilenumber.value.length > 10) {
+            Mobile.setCustomValidity("Please enter Valid Mobile Number.");
+        }
+        else {
+            Mobile.setCustomValidity('');
+        }
+    }
+    Mobile.onkeyup = ValidateNo;
+
+    function ValidateSAID() {
+        var said = document.getElementById("SAID");
+
+        if (said.value.length < 13 || said.value.length > 13) {
+            SAID.setCustomValidity("Please enter Valid SAID");
+        }
+        else {
+            SAID.setCustomValidity('');
+        }
+    }
+    SAID.onkeyup = ValidateSAID;
 </script>
 
 
